--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -11,9 +11,9 @@
 />
 
 <meta name="theme-color" content="#111111" />
-<meta name="author" content="Hamish Williams" />
+<meta name="author" content="Mayank Jain" />
 
-<link rel="manifest" href="https://hamishw.com/manifest.json" />
+<!-- <link rel="manifest" href="https://hamishw.com/manifest.json" />
 <link rel="shortcut icon" href="https://hamishw.com/favicon.svg" />
 <link rel="apple-touch-icon" href="https://hamishw.com/icon-256.png" />
 <link type="text/plain" rel="author" href="https://hamishw.com/humans.txt" />
@@ -39,6 +39,6 @@
 />
 <meta name="twitter:title" content="Hamish Williams | Storybook" />
 <meta name="twitter:site" content="@hamishMW" />
-<meta name="twitter:image" content="https://hamishw.com/social-image.png" />
+<meta name="twitter:image" content="https://hamishw.com/social-image.png" /> -->
 
 <script src="https://magi.hamishw.com/script.js" data-site="CJZKJKLA" defer></script>
