Change links and name

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -4,14 +4,14 @@
   }
 </style>
 
-<title>Mayank Jain - Portfolio</title>
+<title>Raj Singh - Portfolio</title>
 <meta
   name="description"
   content="My custom design component system created from the ground up used in building my portfolio"
 />
 
 <meta name="theme-color" content="#111111" />
-<meta name="author" content="Mayank Jain" />
+<meta name="author" content="Raj Singh" />
 
 <!-- <link rel="manifest" href="https://hamishw.com/manifest.json" />
 <link rel="shortcut icon" href="https://hamishw.com/favicon.svg" />
